--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <canvas id="f_canvas" onclick="reset_f()" width=700 height=500 ></canvas>
     <!-- <canvas id="g_canvas" onclick="reset_g()" width=600 height=400 ></canvas> -->
     <br>
-    <div> Click on the plot to generate new data. Click on either network illustration to rebuild that network.</div>
+    <div> Click in the black box to generate new data. Click in the red box to generate a new network.</div>
+    <a   href = "https://github.com/scttzwdrff/nn-scope-js-mono"> SOURCE CODE </a>
     <script src="graph.js"></script>
     <script src="net.js"></script>
     <script src="data.js"></script>
